--- a/QL_CDC-master/QL_CDC/Views/Admin/Index.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Admin/Index.cshtml
@@ -15,112 +15,119 @@
                             <th>Số điện thoại</th>
                             <th>Email</th>
                             <th></th>
-                            <th>Khóa/Mở khóa</th>
-                            <th>  </th>
+                            <th></th>
+                            <th> Khóa/Mở khóa</th>
                         </tr>
                     </thead>
                     <tbody class="table-border-bottom-0">
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td data-bs-toggle="modal" data-bs-target="#largeModal">
-                                    @Html.DisplayFor(modelItem => item.TenHienThi)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.SDT)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Email)
-                                </td>
-                                <td>
-                                    <div class="col-lg-4 col-md-6">
-                                        <div class="mt-3">
-                                            <!-- Button trigger modal -->
-                                            @*<button type="button"
-                                                        class="btn btn-primary"
-                                                        data-bs-toggle="modal"
-                                                        data-bs-target="#modalCenter">
-                                                    Chi tiết
-                                                </button>*@
+                        <tr>
+                            <td @*data-bs-toggle="modal" data-bs-target="#largeModal"*@>
+                                @Html.DisplayFor(modelItem => item.TenHienThi)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.SDT)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Email)
+                            </td>
+                            <td>
+                                <a onclick="return modalChitiet('@item.MSSV')" style="cursor: pointer">Chi tiết</a>
+                                @*<a data-bs-toggle="modal" data-bs-target="#largeModal">Open Modal</a>*@
+                            </td>
+                            <td>
+                                <div class="col-lg-4 col-md-6">
+                                    <div class="mt-3">
+                                        <!-- Button trigger modal -->
+                                        @*<button type="button"
+                            class="btn btn-primary"
+                            data-bs-toggle="modal"
+                            data-bs-target="#modalCenter">
+                        Chi tiết
+                    </button>*@
 
-                                            <!-- Modal -->
+                                        <!-- Modal -->
 
-                                            <div class="modal fade" id="largeModal" tabindex="-1" aria-hidden="true">
-                                                <div class="modal-dialog modal-lg" role="document">
-                                                    <div class="modal-content">
-                                                        <div class="modal-header">
-                                                            <h5 class="modal-title" id="exampleModalLabel3">Chi tiết người dùng</h5>
-                                                            <button type="button"
-                                                                    class="btn-close"
-                                                                    data-bs-dismiss="modal"
-                                                                    aria-label="Close"></button>
-                                                        </div>
-                                                        <div class="modal-body">
-                                                            <div class="row">
-                                                                <div class="col mb-3">
-                                                                    <label for="nameLarge" class="form-label">Tài khoản</label>
-                                                                    <input type="text" id="nameLarge" class="form-control" value="@item.MSSV" />
-                                                                </div>
-                                                                <div class="col mb-3">
-                                                                    <label for="nameLarge" class="form-label">Tên người dùng</label>
-                                                                    <input type="text" id="nameLarge" class="form-control" value="@item.TenHienThi" />
-                                                                </div>
-                                                            </div>
-                                                            <div class="row">
-                                                                <div class="col mb-3">
-                                                                    <label for="nameLarge" class="form-label">Số điện thoại</label>
-                                                                    <input type="text" id="nameLarge" class="form-control" value="@item.SDT" />
-                                                                </div>
-                                                                <div class="col mb-3">
-                                                                    <label for="nameLarge" class="form-label">Email</label>
-                                                                    <input type="text" id="nameLarge" class="form-control" value="@item.Email" />
-                                                                </div>
-                                                            </div>
-                                                            <div class="row">
-                                                                <div class="col mb-3">
-                                                                    <label for="nameLarge" class="form-label">Địa chỉ</label>
-                                                                    <input type="text" id="nameLarge" class="form-control" value="@item.DiaChi" />
-                                                                </div>
-                                                                <div class="col mb-3">
-                                                                    <label for="nameLarge" class="form-label">Lần hoạt động cuối</label>
-                                                                    <input type="text" id="nameLarge" class="form-control" value="@item.LanHDCuoi" />
-                                                                </div>
-                                                            </div>
-                                                            <div class="col mb-3">
-                                                                <label for="nameLarge" class="form-label">Tình trạng</label>
-                                                                <input type="text" id="nameLarge" class="form-control" value="@item.ttsv" />
-                                                            </div>
-                                                        </div>
-                                                        @*<div class="modal-footer">
-                                                                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
-                                                                    Close
-                                                                </button>
-                                                                <button type="button" class="btn btn-primary">Save changes</button>
-                                                            </div>*@
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+
                                     </div>
+                                </div>
 
-                                </td>
-                                <td>
-                                    <div class="dropdown text-center">
-                                        <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                                            <i class="menu-icon tf-icons bx bx-lock"></i>
-                                        </button>
-                                        <div class="dropdown-menu">
-                                            <!--    <a class="dropdown-item" href="javascript:void(0);"><i class="bx bx-edit-alt me-1"></i> Edit</a>-->
-                                            <a id="tt1" class="dropdown-item" href="javascript:void(0);" onclick="KhoaTaiKhoan('@item.MSSV')">@*<i class="bx bx-lock me-1"></i>*@@item.Khoa</a>
-                                        </div>
+                            </td>
+                            <td>
+                                <div class="dropdown text-center">
+                                    <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
+                                        <i class="menu-icon tf-icons bx bx-lock"></i>
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        <!--    <a class="dropdown-item" href="javascript:void(0);"><i class="bx bx-edit-alt me-1"></i> Edit</a>-->
+                                        <a id="tt1" class="dropdown-item" href="javascript:void(0);" onclick="KhoaTaiKhoan('@item.MSSV')">@*<i class="bx bx-lock me-1"></i>*@@item.Khoa</a>
                                     </div>
-                                </td>
-                            </tr>
+                                </div>
+                            </td>
+                        </tr>
                         }
                     </tbody>
                 </table>
             </div>
         </div>
+    </div>
+</div>
+<div class="modal fade" id="largeModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel3">Chi tiết người dùng</h5>
+                <button type="button"
+                        class="btn-close"
+                        data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col mb-3">
+                        <label for="nameLarge" class="form-label">Tài khoản</label>
+                        <input type="text" id="mssv" class="form-control" value="" />
+                    </div>
+                    <div class="col mb-3">
+                        <label for="nameLarge" class="form-label">Tên người dùng</label>
+                        <input type="text" id="ten" class="form-control" value="" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col mb-3">
+                        <label for="nameLarge" class="form-label">Số điện thoại</label>
+                        <input type="text" id="sdt" class="form-control" value="" />
+                    </div>
+                    <div class="col mb-3">
+                        <label for="nameLarge" class="form-label">Email</label>
+                        <input type="text" id="email" class="form-control" value="" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col mb-3">
+                        <label for="nameLarge" class="form-label">Địa chỉ</label>
+                        <input type="text" id="dc" class="form-control" value="" />
+                    </div>
+                    <div class="col mb-3">
+                        <label for="nameLarge" class="form-label">Lần hoạt động cuối</label>
+                        <input type="text" id="hd" class="form-control" value="" />
+                    </div>
+                </div>
+                @*<div class="col mb-3">
+                        <label for="nameLarge" class="form-label">Tình trạng</label>
+                        <input type="text" id="nameLarge" class="form-control" value="@item.ttsv" />
+                    </div>*@
+            </div>
+            @*<div class="modal-footer">
+                    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
+                        Close
+                    </button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>*@
+
+        </div>
+
     </div>
 </div>
 
@@ -149,5 +156,25 @@
                 }
             })
         }
+    }
+
+    function modalChitiet(ms) {
+        console.log("aaaaaa");
+        $.ajax({
+            url: '/Admin/CTND?id=' + ms,
+            contentType: 'application/html; charset=utf-8',
+            type: 'get',
+            success: function (result) {
+                console.log(result);
+                /*console.log(item);*/
+                $('#largeModal').modal('show');
+                $('#mssv').val(result.mssv)
+                $('#ten').val(result.tenHienThi)
+                $('#email').val(result.email)
+                $('#sdt').val(result.sdt)
+                $('#dc').val(result.diaChi)
+                $('#hd').val(result.lanHDCuoi)
+            }
+        })
     }
 </script>
